<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_8"
    app:cardCornerRadius="@dimen/corner_radius_16"
    app:cardElevation="@dimen/card_elevation_8">

    <!-- Defines a single recipe card (CardView) displayed within a list -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_12">

        <!-- FrameLayout: Image + Heart -->
        <FrameLayout
            android:layout_width="@dimen/width_120"
            android:layout_height="@dimen/height_120">

        <!-- Recipe image -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/recipe_IMG_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/recipe_image_item" />

        <!-- The heart image for marking a "favorite recipe" -->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/recipe_IMG_heart"
                android:layout_width="@dimen/width_24"
                android:layout_height="@dimen/height_24"
                android:layout_gravity="top|start"
                android:layout_margin="@dimen/margin_8"
                android:contentDescription="@string/favorite"
                android:src="@drawable/empty_heart" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/recipe_LBL_match"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_margin="@dimen/margin_8"
                android:background="@drawable/match_tag_background"
                android:padding="@dimen/padding_4"
                android:text="@string/match"
                android:textSize="@dimen/text_size_12"
                android:textColor="@android:color/black"
                android:visibility="gone"/>
        </FrameLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_start_8">

            <!-- Recipe title -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/recipe_LBL_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipe_title"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end"
                android:gravity="start"
                android:textAlignment="textStart"
                android:layout_marginBottom="@dimen/margin_bottom_4" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/recipe_LBL_timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viewed_on_25_06_2025_at_14_32"
                android:textSize="@dimen/text_size_12"
                android:textColor="@android:color/darker_gray"
                android:layout_marginBottom="@dimen/margin_bottom_4"
                android:visibility="gone"
                />

            <!-- Ingredients -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/recipe_LBL_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredients"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_14"
                android:maxLines="3"
                android:ellipsize="end"
                android:layout_marginBottom="@dimen/margin_bottom_4" />

            <!-- Instructions -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/recipe_LBL_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructions"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_14"
                android:maxLines="3"
                android:ellipsize="end"/>
        </LinearLayout>

        <!-- Arrow to show that there is a sequel -->
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/width_24"
            android:layout_height="@dimen/height_24"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_arrow_right"
            android:contentDescription="@string/go_to_details"
            android:layout_marginStart="@dimen/margin_start_8" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
