<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_24"
    android:background="@android:color/white">

    <!-- Logo -->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/registerLogo"
        android:layout_width="@dimen/width_160"
        android:layout_height="@dimen/height_160"
        android:src="@drawable/kitchenmate_logo"
        android:contentDescription="@string/kitchenmate_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/editTextFirstName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_top_50"
        android:layout_marginBottom="@dimen/margin_bottom_16"/>

    <!-- FirstName -->
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextFirstName"
        android:layout_width="@dimen/width_0"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:minHeight="@dimen/min_height_48"
        android:textColorHint="@android:color/black"
        android:inputType="textPersonName"
        android:layout_marginTop="@dimen/margin_top_16"
        app:layout_constraintTop_toBottomOf="@id/registerLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- LastName -->
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextLastName"
        android:layout_width="@dimen/width_0"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:minHeight="@dimen/min_height_48"
        android:textColorHint="@android:color/black"
        android:inputType="textPersonName"
        android:layout_marginTop="@dimen/margin_top_8"
        app:layout_constraintTop_toBottomOf="@id/editTextFirstName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <!-- Email -->
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailEditText"
        android:layout_width="@dimen/width_0"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:minHeight="@dimen/min_height_48"
        android:textColorHint="@android:color/black"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/margin_top_8"
        app:layout_constraintTop_toBottomOf="@id/editTextLastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Password -->
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordEditText"
        android:layout_width="@dimen/width_0"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:minHeight="@dimen/min_height_48"
        android:textColorHint="@android:color/black"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/margin_top_8"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Confirm Password -->
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="@dimen/width_0"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:minHeight="@dimen/min_height_48"
        android:textColorHint="@android:color/black"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/margin_top_8"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Register Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitRegisterButton"
        android:layout_width="@dimen/width_0"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:backgroundTint="@color/amber_800"
        android:textColor="@android:color/black"
        app:cornerRadius="@dimen/corner_radius_16"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_top_24" />

    <!-- Optional: Already have account -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/goToLoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_log_in"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintTop_toBottomOf="@id/submitRegisterButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_top_16" />

</androidx.constraintlayout.widget.ConstraintLayout>
