<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_24"
    android:background="@android:color/white">

    <!-- Logo -->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logoImageView"
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:layout_marginTop="@dimen/margin_top_60"
        android:layout_marginBottom="@dimen/margin_bottom_24"
        android:contentDescription="@string/kitchenmate_logo_login"
        android:src="@drawable/kitchenmate_logo"
        app:layout_constraintBottom_toTopOf="@+id/emailEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Email Field -->
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailEditText"
        android:layout_width="@dimen/width_0"
        android:layout_height="wrap_content"
        android:hint="@string/email_login"
        android:minHeight="@dimen/min_height_48"
        android:textColorHint="@android:color/black"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/margin_top_16"
        app:layout_constraintTop_toBottomOf="@id/logoImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <!-- Password Field -->
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordEditText"
        android:layout_width="@dimen/width_0"
        android:layout_height="wrap_content"
        android:hint="@string/password_login"
        android:minHeight="@dimen/min_height_48"
        android:textColorHint="@android:color/black"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/margin_top_8"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <!-- Login Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="@dimen/width_0"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:backgroundTint="@color/amber_800"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_top_24" />

    <!-- Register Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        android:layout_width="@dimen/width_0"
        android:layout_height="wrap_content"
        android:text="@string/register_login"
        android:backgroundTint="@android:color/black"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_top_12" />

</androidx.constraintlayout.widget.ConstraintLayout>
